# cashier_backend_api

./: .coveragerc  .gitignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: docker.yml
authentication/: serializers.py  urls.py  views.py
authentication/tests/: test_views.py
config/: settings.py  urls.py  views.py
config/tests/: test_health.py
menu/: admin.py  models.py  serializers.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_alter_menuitem_description_ar_and_more.py  0003_alter_category_options_alter_quantity_options_and_more.py  0004_ingredient_price_ingredient_quantity.py  0005_rename_quantity_unit_alter_unit_options_and_more.py  0006_alter_menuitem_category.py  0007_menuitem_website_label_ar.py  0008_rename_website_label_ar_menuitem_label_ar.py  0009_branch_menuitem_branches.py  0010_add_etl_timestamps.py  0011_menuitembranch_timestamps.py
menu/tests/: test_models.py  test_serializers.py  test_views.py
orders/: admin.py  models.py  pagination.py  serializers.py  services.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_remove_orderitem_menu_item_name_en_and_more.py  0003_orderitemmodification_ingredient_price_and_more.py  0004_alter_customer_email.py  0005_alter_order_status_orderitem_order_item_note_and_more.py  0006_alter_customer_address_alter_customer_email_and_more.py  0007_orderlog.py  0008_deliverycompany_order_delivery_company.py  0009_order_orders_orde_created_0e92de_idx_and_more.py  0010_order_branch_order_orders_orde_branch__eed405_idx_and_more.py  (+6 more)
reports/: serializers.py  urls.py  views.py
(+6 files in other folders)
