[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coverage>=7.14.0",
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "django-stubs>=6.0.4",
    "djangorestframework>=3.17.1",
    "dotenv>=0.9.9",
    "drf-spectacular>=0.29.0",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg>=3.3.3",
    "ruff>=0.15.11",
]
